--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 2rem;
         margin-top: 2rem;
+        text-align: center;
       }
 
       .card {
@@ -106,6 +107,7 @@
         border-radius: 10px;
         box-shadow: 0 2px 8px rgba(0,0,0,0.05);
         transition: transform 0.3s ease;
+        text-align: center;
       }
 
       .card:hover {
@@ -184,4 +186,72 @@
 
       .integracao-box .btn:hover {
         background-color: #b8952d;
+      }
+
+      .metodo-leveza {
+        padding: 0 !important; /* Topo 0, laterais 1rem, embaixo 2rem */
+        margin: 0 !important;        /* Garante que não haja margem externa */
+        background-color: #fff8f1;
+      }
+
+      .metodo-leveza__content {
+        padding-bottom: 0 !important;
+        margin-bottom: 0 !important;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        gap: 2rem;
+        margin-bottom: 0px;
+      }
+
+      .metodo-leveza__text {
+        flex: 1;
+        min-width: 280px;
+      }
+
+      .metodo-leveza__text img.metodo-leveza__logo {
+        max-width: 280px;
+        height: auto;
+        margin-bottom: 1.5rem;
+      }
+
+      .metodo-leveza__text p {
+        font-size: 1.1rem;
+        line-height: 1.6;
+        color: #4a4a4a;
+      }
+
+      .metodo-leveza__image {
+        padding-bottom: 0 !important;
+        margin-bottom: 0 !important;
+        max-width: 100%;
+        height: auto;
+        flex: 1;
+        text-align: center;
+      }
+
+      /*.metodo-leveza__image img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      }*/
+
+      .servicos h5 {
+        text-align: center;
+        font-family: "Tangerine", cursive;
+        font-weight: 700;
+        font-size: 4.5rem;
+        color: #2c1e17; /* marrom elegante, ajuste conforme sua paleta */
+      }
+
+      .servicos h4 {
+        text-align: center;
+        font-family: "Tangerine", cursive;
+        font-weight: 600;
+        font-size: 3.2rem;
+        color: #9e8d7f; /* bege/dourado claro, ajuste conforme seu design */
+        margin-bottom: -10px; /* para deixar mais próximo do h3 */
+        
       }
